--- a/index.css
+++ b/index.css
@@ -98,3 +98,12 @@ h1 {
     width: 50%;
   }
 }
+
+/* iPhone 11 pro max */
+@media only screen and (device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3) {
+  #container {
+    width: 100%;
+    height: 100%;
+    font-size: 30px;
+  }
+}
